Fix alignment of buttons at mobile size

--- a/components/pick/pick.module.css
+++ b/components/pick/pick.module.css
@@ -172,3 +172,11 @@
 .actionsXSmall {
   justify-content: center;
 }
+
+.actionsXXSmall > button {
+  display: grid;
+}
+
+.actionsXXSmall span {
+  justify-items: center;
+}
